# Cassia

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/android/cassia/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  XrApp.cpp  XrApp.h  main_graphics.cpp
app/src/main/cpp/base/: ResourceManager.cpp
app/src/main/cpp/base/include/: AndroidAppState.h  Color.h  IOpenXrProgram.h  LRUCache.h  RenderLayerInfo.h  ResourceManager.h  SwapchainInfo.h
app/src/main/cpp/core/components/: Cubic.cpp  Cubic.h
app/src/main/cpp/core/pipeline/: CubicPipeline.cpp  CubicPipeline.h  TrianglePipeline.h  VkGraphicsPipeline.cpp  VkGraphicsPipeline.h  VkGraphicsPipelineManager.cpp  VkGraphicsPipelineManager.h
app/src/main/cpp/utils/: Log.h
app/src/main/cpp/xrcommon/: DebugOutput.h  GraphicsAPI_Vulkan.cpp  GraphicsAPI_Vulkan.h  OpenXRDebugUtils.cpp  OpenXRDebugUtils.h  OpenXRHelper.h
app/src/main/java/com/android/cassia/: ALog.kt  ExecutorPool.kt
app/src/main/java/com/android/cassia/base/: Answer.kt  IResponse.kt
app/src/main/java/com/android/cassia/models/: ModelsManager.kt
app/src/main/java/com/android/cassia/models/deepseek/: CloudServer.kt  DeepSeekManager.kt  ResponseDecoder.kt
app/src/main/java/com/android/cassia/models/deepseek/bean/: BalanceDetail.kt  BalanceInfo.kt  ChatCompletion.kt  ChatRequest.kt
app/src/main/java/com/android/cassia/models/deepseek/fake/: FakeServer.kt
app/src/main/java/com/android/cassia/network/: OkHttpManager.kt
app/src/main/java/com/android/cassia/ui/: ChatActivity.kt
app/src/main/java/com/android/cassia/ui/ui/components/: MarkdownViewer.kt
app/src/main/java/com/android/cassia/ui/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/android/cassia/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
